# bioe145-final

./: Final_Project_Part_1_Autoencoder.ipynb  Final_Project_Part_2_Classification.ipynb  README.md  pyproject.toml
configs/: __init__.py  autoencoder_model.config  final_autoencoder.config
models/: __init__.py  autoencoder.py  final_model.pt
ray_results/ray_train_2025-04-21_13-44-10/: tuner.pkl
ray_results/ray_train_2025-04-21_13-44-39/: experiment_state-2025-04-21_13-44-39.json  search_gen_state-2025-04-21_13-44-39.json  searcher-state-2025-04-21_13-44-39.pkl  tuner.pkl
ray_results/ray_train_2025-04-21_13-45-32/: experiment_state-2025-04-21_13-45-32.json  search_gen_state-2025-04-21_13-45-32.json  searcher-state-2025-04-21_13-45-32.pkl  tuner.pkl
ray_results/ray_train_2025-04-21_13-51-31/: experiment_state-2025-04-21_13-51-31.json  search_gen_state-2025-04-21_13-51-31.json  searcher-state-2025-04-21_13-51-31.pkl  tuner.pkl
ray_results/ray_train_2025-04-21_14-00-54/: experiment_state-2025-04-21_14-00-54.json  search_gen_state-2025-04-21_14-00-54.json  searcher-state-2025-04-21_14-00-54.pkl  tuner.pkl
ray_results/ray_train_2025-04-21_14-05-00/: experiment_state-2025-04-21_14-05-00.json  search_gen_state-2025-04-21_14-05-00.json  searcher-state-2025-04-21_14-05-00.pkl  tuner.pkl
ray_results/ray_train_2025-04-21_14-07-12/: experiment_state-2025-04-21_14-07-12.json  search_gen_state-2025-04-21_14-07-12.json  searcher-state-2025-04-21_14-07-12.pkl  tuner.pkl
ray_results/ray_train_2025-04-21_14-09-41/: experiment_state-2025-04-21_14-09-41.json  tuner.pkl  (+2 more)
(+1156 files in other folders)
